[package]
name = "raytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.6", features = ["png"], default-features = false }
serde = { version = "1", features = [ "derive" ] }
ron = "0.8"
