[package]
name = "raytrace_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
raytracer = { path = "./raytracer/" }
scene_parser = { path = "./scene_parser/" }
image = { version = "0.24.6", features = ["png"], default-features = false }
clap = { version = "4.2.7", features = ["derive"] }
path-absolutize = "3.1"
